--- a/_posts/2019-12-20-kernel-5.4-iwlwifi.markdown
+++ b/_posts/2019-12-20-kernel-5.4-iwlwifi.markdown
@@ -4,7 +4,7 @@ title: iwlwifi with 5.4 Kernel
 categories: Broken
 ---
 
-The Kernel 5.4 release makes iwlwifi module crash for various models of Intel WiFi NIC. The WiFi NIC is missing from `ip link`.
+Kernel 5.4 makes iwlwifi module crash for various models of Intel WiFi NIC. The WiFi NIC is missing from `ip link`.
 
 Some users are lucky enough not to experience any issues. You may or may not be a lucky one.
 
@@ -15,7 +15,7 @@ Some users are lucky enough not to experience any issues. You may or may not be 
 ## Workarounds
 
 - Remove the `lar_disable=1` module parameter if it is present
-- Downgrade Kernel to < 5.4
+- Downgrade kernel to < 5.4
 
 ## Tracked elsewhere
 
