--- a/_posts/2019-12-20-kernel-5.4-nvme.markdown
+++ b/_posts/2019-12-20-kernel-5.4-nvme.markdown
@@ -4,7 +4,7 @@ title: Kernel 5.4 Can't Read NVMe Partitions
 categories: Broken
 ---
 
-Strike three for 5.4 Kernel: it won't read the partitions of some NVMe drives that do not strictly adhere to the NVMe specification.
+Strike three for Kernel 5.4: it won't read the partitions of some NVMe drives that do not strictly adhere to the NVMe specification.
 
 ## State
 
@@ -14,7 +14,7 @@ A fixing patch has landed in 5.5-rc2 and will be backported to 5.4. Just wait.
 
 ## Workarounds
 
-- Downgrade Kernel to < 5.4
+- Downgrade kernel to < 5.4
 
 ## Tracked elsewhere
 
